Change project name case to uppercase

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "StarMap",
-  "name": "Find the right tools for your augmented reality project.",
+  "short_name": "STARMAP",
+  "name": "Suggestion Tool for Augmented Reality Makers and Programmers",
   "icons": [
     {
       "src": "favicon.ico",
